; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/localedef/extr_ctype.c_get_ctype.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/localedef/extr_ctype.c_get_ctype.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i8* }

@ctypes = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"out of memory\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_7__* (i8*)* @get_ctype to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_7__* @get_ctype(i8* %0) #0 {
  %2 = alloca %struct.TYPE_7__*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.TYPE_7__, align 8
  %5 = alloca %struct.TYPE_7__*, align 8
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 0
  store i8* %6, i8** %7, align 8
  %8 = load i32, i32* @ctypes, align 4
  %9 = call %struct.TYPE_7__* @RB_FIND(i32 %8, i32* @ctypes, %struct.TYPE_7__* %4)
  store %struct.TYPE_7__* %9, %struct.TYPE_7__** %5, align 8
  %10 = icmp eq %struct.TYPE_7__* %9, null
  br i1 %10, label %11, label %23

11:                                               ; preds = %1
  %12 = call %struct.TYPE_7__* @calloc(i32 1, i32 8)
  store %struct.TYPE_7__* %12, %struct.TYPE_7__** %5, align 8
  %13 = icmp eq %struct.TYPE_7__* %12, null
  br i1 %13, label %14, label %16

14:                                               ; preds = %11
  %15 = call i32 @errf(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  store %struct.TYPE_7__* null, %struct.TYPE_7__** %2, align 8
  br label %25

16:                                               ; preds = %11
  %17 = load i8*, i8** %3, align 8
  %18 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %19 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %18, i32 0, i32 0
  store i8* %17, i8** %19, align 8
  %20 = load i32, i32* @ctypes, align 4
  %21 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %22 = call i32 @RB_INSERT(i32 %20, i32* @ctypes, %struct.TYPE_7__* %21)
  br label %23

23:                                               ; preds = %16, %1
  %24 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  store %struct.TYPE_7__* %24, %struct.TYPE_7__** %2, align 8
  br label %25

25:                                               ; preds = %23, %14
  %26 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  ret %struct.TYPE_7__* %26
}

declare dso_local %struct.TYPE_7__* @RB_FIND(i32, i32*, %struct.TYPE_7__*) #1

declare dso_local %struct.TYPE_7__* @calloc(i32, i32) #1

declare dso_local i32 @errf(i8*) #1

declare dso_local i32 @RB_INSERT(i32, i32*, %struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
